force-app/main/default/objects/Scramble_Configuration__c/Scramble_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration of field and object to scramble PII data</description>
    <label>Scramble Configuration</label>
</CustomObject>