force-app/main/default/objects/Scramble_Configuration__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <inlineHelpText>Api Name of Field</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>