force-app/main/default/objects/Scramble_Configuration__c/fields/IsReference__c.field-meta.xml
<CustomField>
    <fullName>IsReference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lookup Field to account on object</inlineHelpText>
    <label>IsReference</label>
    <type>Checkbox</type>
</CustomField>