force-app/main/default/objects/Scramble_Configuration__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>API Name of object</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>