force-app/main/default/objects/Scramble_Configuration__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Field__c</columns>
    <columns>IsReference__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>